# uni

prog1/: CMakeLists.txt  main.c
prog1/ue1/: CMakeLists.txt  blatt1_1.c  blatt1_2.c  blatt1_4.c  blatt1_5.c
prog1/week1/: CMakeLists.txt
prog1/week1/ue/: CMakeLists.txt  blatt1_3.c
prog1/week10/ue/: CMakeLists.txt  blatt10_1.c  blatt10_2.c
prog1/week11/: CMakeLists.txt
prog1/week11/ue/: CMakeLists.txt  blatt11_1.c  blatt11_2.c
prog1/week2/: CMakeLists.txt  calc1.c  cinema.c
prog1/week2/ue/: CMakeLists.txt  blatt2_1.c  blatt2_2.c  blatt2_3.c  blatt2_4.c  blatt2_5.c
prog1/week3/ue/: CMakeLists.txt  blatt3_1.c  blatt3_2.c  blatt3_3.c  blatt3_4.c  blatt3_5.c
prog1/week4/: CMakeLists.txt
prog1/week4/ue/: CMakeLists.txt  blatt4_1.c  blatt4_2.c  blatt4_3.c  blatt4_4.c  blatt4_5.c
prog1/week5/ue/: CMakeLists.txt  blatt5_1.c  blatt5_2.c  blatt5_3.c  blatt5_4.c  blatt5_5.c  shared.c  shared.h
prog1/week6/ue/: CMakeLists.txt  blatt6_1.c  blatt6_2.c  blatt6_3.c  chars.c  chars.h
prog1/week7/: CMakeLists.txt  arrays.c
prog1/week7/ue/: CMakeLists.txt  blatt7_1.c  blatt7_2.c  blatt7_3.c  blatt7_4.c
prog1/week8/: CMakeLists.txt  pointers.c
prog1/week8/ue/: CMakeLists.txt  blatt8_1.c  blatt8_2.c  blatt8_3.c  blatt8_4.c  test.txt  werte.txt
