cmake_minimum_required(VERSION 4.0)
project(c C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(week1)
add_subdirectory(week2)
add_subdirectory(week3)
add_subdirectory(week4)
add_subdirectory(week5)
add_subdirectory(week6)
add_subdirectory(week7)
