add_executable(ue1_blatt1_1 ${CMAKE_CURRENT_LIST_DIR}/blatt1_1.c)
add_executable(ue1_blatt1_2 ${CMAKE_CURRENT_LIST_DIR}/blatt1_2.c)
add_executable(ue1_blatt1_3 ${CMAKE_CURRENT_LIST_DIR}/blatt1_3.c)
add_executable(ue1_blatt1_4 ${CMAKE_CURRENT_LIST_DIR}/blatt1_4.c)
add_executable(ue1_blatt1_5 ${CMAKE_CURRENT_LIST_DIR}/blatt1_5.c)
